force-app/main/default/objects/Touchnet_Payment_Gateway__c/Touchnet_Payment_Gateway__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Touchent Payment Gateway</label>
</CustomObject>