force-app/main/default/objects/TouchNet_Payment_Gateway__c/fields/Gateway_Origin__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Origin__c</fullName>
    <label>Gateway Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>