force-app/main/default/objects/Touchnet_Payment_Gateway__c/fields/Tlink_URL__c.field-meta.xml
<CustomField>
    <fullName>Tlink_URL__c</fullName>
    <label>Tlink URL</label>
    <type>Url</type>
</CustomField>