force-app/main/default/objects/Touchnet_Payment_Gateway__c/fields/Upay_Id__c.field-meta.xml
<CustomField>
    <fullName>Upay_Id__c</fullName>
    <label>Upay Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>