force-app/main/default/objects/Touchnet_Payment_Gateway__c/fields/Upay_URL__c.field-meta.xml
<CustomField>
    <fullName>Upay_URL__c</fullName>
    <label>Upay URL</label>
    <type>Url</type>
</CustomField>