force-app/main/default/objects/Touchnet_Payment_Gateway__c/fields/Validation_Key__c.field-meta.xml
<CustomField>
    <fullName>Validation_Key__c</fullName>
    <label>Validation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>